--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -549,7 +549,7 @@ section {
 
 .cta {
   background: linear-gradient(rgba(40, 58, 90, 0.62), rgba(40, 58, 90, 0.667)),
-    url("../images/background-img.png") fixed center center;
+    url("../images/professional-car-removal-service.jpg") fixed center center;
   background-size: cover;
   padding: 120px 0;
 }
